# frontend-framework-starter

./: .editorconfig  .gitignore  AGENTS.md  LICENSE.md  README.md  package-lock.json  package.json
.github/workflows/: build.yaml
assets/: index.css  launch.mjs
components/wc-fin/: .gitignore  .prettierrc.json  package-lock.json  package.json  readme.md  stencil.config.ts
components/wc-fin/src/: components.d.ts  index.html
frameworks/angular/: creating-container.md  creating-workspace.md  readme.md
frameworks/angular-signals/: README.md  angular.json  launch.mjs  package-lock.json  package.json
frameworks/angular-signals/public/: manifest.fin.json
frameworks/angular/container/: README.md  angular.json  eslint.config.js  launch.mjs  package-lock.json  package.json  tsconfig.json
frameworks/angular/web/: LICENSE.MD  README.md  angular.json  package-lock.json  package.json  tsconfig.app.json
frameworks/angular/workspace/: .browserslistrc  README.md  angular.json  launch.mjs  package-lock.json  package.json  tsconfig.json  tsconfig.spec.json
frameworks/angular/workspace-next/: README.md  angular.json  launch.mjs  package-lock.json  package.json
frameworks/python/dash/: README.md  dash_app.py  pyproject.toml  run.py
frameworks/python/dash/assets/: manifest.fin.json  openfin_bridge.js  provider.html  styles.css
frameworks/python/dash/pages/: view1.py  view2.py
frameworks/python/streamlit/: .gitignore  README.md  pyproject.toml  run.py  streamlit_app.py
frameworks/python/streamlit/.streamlit/: config.toml
frameworks/python/streamlit/assets/: manifest.fin.json  openfin_bridge.js  provider.html  styles.css
frameworks/python/streamlit/openfin_bridge_component/: __init__.py
frameworks/python/streamlit/openfin_bridge_component/frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frameworks/python/streamlit/openfin_bridge_component/frontend/src/: main.tsx
frameworks/python/streamlit/openfin_bridge_component/frontend/src/helpers/: context.ts  fin.ts
frameworks/python/streamlit/pages/: view1.py  view2.py
frameworks/react/: creating-container.md  creating-workspace.md  readme.md
frameworks/react/container/: launch.mjs  package-lock.json  package.json  tsconfig.json
frameworks/react/eb-example/: package-lock.json  package.json  tsconfig.app.json
frameworks/react/web/: LICENSE.MD  (+10 more)
frameworks/react/web-intents/: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.node.json  vite.config.ts
scripts/: upgrade-versions.mjs
(+293 files in other folders)
